# crypto-manual-alert

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  langgraph.json  langgraph.multi-interrupt.json  pyproject.toml  run_real_test.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_analysis_admission_idempotency.py  0003_tenant_scoped_actor_ids.py  0004_official_assistant_id.py  0005_run_recovery_state.py  0006_interrupt_projection.py  0007_interrupt_pauses.py  0008_oidc_identity_issuer.py  0009_run_fork_lineage.py  0010_notification_outbox.py  0011_notification_destinations.py  0012_run_retry_lineage.py  0013_feedback.py  0014_watchlist.py  0015_observability_delivery.py  0016_repair_fork_checkpoint_scope.py  0017_domain_events.py  0018_progressive_events.py  0019_ddgs_provenance.py  0020_entitlements_usage.py  0021_scheduled_monitors.py  0022_data_lifecycle.py
backend/src/crypto_alert_v2/: __init__.py  config.py
backend/src/crypto_alert_v2/agents/: __init__.py  deep_research.py  execution_audit.py  market_analysis.py  research.py  research_harness_selection.py  retry.py  security.py
backend/src/crypto_alert_v2/api/: __init__.py  agent_server.py  app.py  health.py  request_identity.py  schemas.py  service.py
backend/src/crypto_alert_v2/auth/: __init__.py  agent_healthcheck.py  agent_server.py  context.py  development_bootstrap.py  development_keys.py  internal_token.py  membership.py  store_namespace.py  worker_authorization.py
backend/src/crypto_alert_v2/commands/: __init__.py  dispatcher.py  provision.py  seed_hitl_e2e.py  worker.py
backend/tests/: conftest.py
backend/tests/contract/: test_actor_context.py  test_agent_factory.py  test_agent_readiness_monitor.py  test_agent_server_auth.py  test_agent_server_client.py  test_agent_server_probe.py  test_agent_server_protocol.py  test_analysis_graph.py  test_canonical_framework_boundary.py  test_command_worker.py  test_data_lifecycle.py  test_dependency_contract.py  test_deployment_topology.py  test_domain_event_contract.py  test_event_stream_contract.py  test_execution_identity.py  test_failure_injection_profile.py  test_graph_export.py  test_graph_review_contract.py  test_internal_auth_runtime.py  test_internal_jwt_overlap_rotation.py  test_internal_token.py  test_interrupt_pause_persistence.py  test_key_rotation_runtime.py  test_langsmith_release_gate.py  test_local_supply_chain_gate.py  test_monitor_api_contract.py  test_monitor_cron_client.py  test_monitor_ingress_graph.py  test_monitor_persistence.py  test_notification_adapter.py  test_notification_outbox_schema.py  test_observability_assembly.py  test_observability_delivery_planning.py  test_observability_product_config.py  test_observability_tenant_policy.py  test_observability_verification.py  test_persistence_schema.py  test_product_agent_stream.py  test_product_api.py  (+17 more)
backend/tests/eval/: __init__.py  test_dataset.py  test_outcome.py
backend/tests/fixtures/: __init__.py  golden_cases.py
backend/tests/graph/: __init__.py  test_graph_topology.py  test_interrupt_resume.py
backend/tests/integration/: test_agent_server_interrupt_routing.py  test_artifact_transaction.py  test_command_dispatcher.py  test_data_lifecycle.py  test_interrupt_pause_migration.py  test_interrupt_resume.py  test_m4_cross_tenant_security.py  test_monitor_persistence.py  test_monitor_product_service.py  test_multi_interrupt_fixture.py  test_notification_credential_rewrap.py  test_notification_destinations.py  test_notification_worker.py  test_observability_cardinality.py  test_observability_delivery_repository.py  test_observability_langfuse_transport.py  test_observability_langsmith_transport.py  test_observability_outage.py  test_okx_provider.py  test_outbox_idempotency.py  test_outbox_manual_resend.py  test_product_analysis_service.py  test_projection_reconciler_postgres.py  test_provisioning_identity.py  test_run_durability.py  test_worker_process_lifecycle.py  test_worker_process_recovery.py
backend/tests/performance/: test_concurrency_stream_load.py  test_local_product_slo_collector.py  test_slo_contract.py
backend/tests/real/: test_real_deep_research.py  test_real_market_and_search.py  test_real_model_analysis.py  test_real_model_capabilities.py  test_real_web_market_fallback.py
backend/tests/security/: test_agent_pii_middleware.py  test_notification_credentials.py  test_notification_keyring_rotation.py  test_protocol_secret_leak.py  test_secret_redaction.py
backend/tests/unit/: __init__.py  test_deep_research.py  test_domain_models.py  test_evidence_policy.py  test_execution_audit.py  test_notification_rotation.py  test_notification_worker_state.py  test_observability_worker.py  test_okx_parser.py  test_projection_reconciler.py  test_research_relevance.py  test_risk_policy.py  test_search_parser.py  test_seed_hitl_e2e.py  test_state.py
config/: default.yaml  prod.yaml  (+1 more)
(+973 files in other folders)
