[project]
name = "crypto-alert-v2"
version = "2.0.0"
description = "Crypto Intelligence Agent - V2"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langgraph>=0.2.40,<0.3",
    "langgraph-sdk>=0.1.33,<0.2",
    "langsmith>=0.2.0,<0.3",
    "sqlalchemy>=2.0.35,<3.0",
    "alembic>=1.13.0,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "redis>=5.0.0,<6.0",
    "hiredis>=2.3.0,<3.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "tavily-python>=0.5.0,<1.0",
    "langfuse>=2.52.0,<3.0",
    "structlog>=24.4.0,<25.0",
    "python-dateutil>=2.9.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-mock>=3.14.0,<4.0",
    "faker>=30.0.0,<31.0",
    "langchain-deepagents>=0.0.50,<0.1;python_version>='3.12'",
    "ruff>=0.7.0,<1.0",
    "mypy>=1.13.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--no-cov", "-v"]
markers = [
    "unit: 领域单元测试",
    "graph: Graph Contract 测试",
    "agent: Agent Contract 测试",
    "integration: 集成测试",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
