[project]
name = "crypto-manual-alert-v2"
version = "2.0.0"
description = "Multi-user crypto intelligence agent built on the official LangChain and LangGraph runtime"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "deepagents==0.6.12",
    "fastapi==0.139.0",
    "greenlet==3.5.3",
    "httpx==0.28.1",
    "langchain==1.3.13",
    "langchain-openai==1.3.5",
    "langchain-protocol==0.0.18",
    "langchain-tavily==0.2.18",
    "langfuse==4.14.0",
    "langgraph==1.2.9",
    "langgraph-api==0.11.0",
    "langgraph-checkpoint-postgres==3.1.0",
    "langgraph-cli[inmem]==0.4.31",
    "langgraph-sdk==0.4.2",
    "langsmith==0.10.2",
    "pydantic-settings==2.14.2",
    "pydantic==2.13.4",
    "PyJWT==2.13.0",
    "SQLAlchemy==2.0.51",
    "uvicorn==0.51.0",
]

[project.scripts]
crypto-alert-provision = "crypto_alert_v2.commands.provision:main"

[dependency-groups]
dev = [
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.2,<2",
    "pytest-cov>=7,<8",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_alert_v2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-ra"]
asyncio_mode = "auto"

[tool.uv]
default-groups = ["dev"]
